Fix spacing on contact page

--- a/styles.css
+++ b/styles.css
@@ -160,15 +160,53 @@ h2{
     
 }
 .contact-links:hover{
-    font-size: 30px;
     color: rgba(197,220,223,100%);
     text-decoration: none;
 }
 
+/*MEDIA CONTACT PAGE*/
 @media only screen and (max-width:1200px){
     .contact{
         background-image: none;
     }
+    .contact-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+    .h2-blue{
+        margin-top: 6rem;
+        color: rgba(197,220,223,100%);
+        font-size: 2em;
+        font-family: "Lato", sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+    .contact-body{
+        padding-right: 0px;
+        margin-top: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+    .contant-body-links{
+        margin-left: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-content: flex-start;
+        flex-wrap: nowrap;
+    }
+    .contact-links{
+        font-size: 15px;
+        
+    }
+   
+
 }
 
 /*ABOUT ME*/
